# jangq

./: .gitignore  FORMAT.md  INTEGRATION.md  JANG-ISSUES.md  JANG-PLAN.md  MLXQ-PLAN.md  MXQ-PLAN.md  README.md  benchmark_humaneval.py  benchmark_mmlu.py  benchmark_mmlu_minimax.py  crack_jang_surgery.py  crack_jang_surgery_multi.py  crack_jang_sweep.py  crack_minimax_optimized.py  mmlu_results_4b9b.txt  probe_jang_manual.py  probe_jang_model.py  probe_jang_projected.py  ram_monitor.sh  run_harmbench.py
jang-runtime/: Package.swift
jang-runtime/Metal/: JANGAttention.metal  JANGCompute.metal  JANGDequant.metal  JANGEmbedding.metal  jang.metallib
jang-tools/: README.md  pyproject.toml
jang-tools/jang_tools/: __init__.py  __main__.py  allocate.py  architectures.py  awq.py  benchmark.py  calibrate.py  convert.py  fp8.py  gptq.py  loader.py  pack.py  quantize.py
jang-tools/jang_tools/format/: __init__.py  reader.py  spec.py  writer.py
jang-tools/tests/: test_format.py  test_pack.py  test_quantize.py
mlxq-runtime/: Package.resolved  Package.swift
mlxq-runtime/Metal/: MXQAttention.metal  MXQCompute.metal  MXQDequant.metal  MXQEmbedding.metal  mxq.metallib
mlxq-tools/: pyproject.toml
mlxq-tools/mlxq_tools/: __main__.py  allocate.py  convert.py  gptq.py  pack.py
mlxq-tools/mlxq_tools/format/: reader.py
mlxq-tools/tests/: test_format.py  test_pack.py  test_quantize.py
mxq-runtime/: Package.swift
mxq-runtime/.build/: build.db  debug.yaml  plugin-tools.yaml
mxq-runtime/Metal/: MXQCompute.metal  mxq.metallib
mxq-tools/: pyproject.toml
mxq-tools/mxq_tools/: __init__.py  __main__.py  allocate.py  architectures.py  awq.py  calibrate.py  convert.py  quantize.py
mxq-tools/mxq_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mxq-tools/mxq_tools/format/: __init__.py  reader.py  spec.py  writer.py
mxq-tools/tests/: test_format.py  test_pack.py  test_quantize.py
research/: 01-quantization-fundamentals.md  02-llamacpp-gguf-architecture.md  03-importance-aware-quantization-methods.md  04-extreme-quantization-2bit.md  05-apple-metal-gpu-computing.md  06-pruning-and-quantization.md  07-matrix-mathematics-for-inference.md  08-calibration-and-importance-scoring.md  10-modern-architectures-and-attention.md  397B-BFLOAT16-FIX.md  397B-INVESTIGATION-LOG.md  397B-MLP-ASYMMETRY.md  AUDIT-01-fundamentals.md  AUDIT-02-llamacpp.md  AUDIT-03-quantization-methods.md  AUDIT-04-2bit.md  AUDIT-05-metal-gpu.md  GROUP_SIZE_AND_SPEED_AUDIT.md  JANG-RESULTS.md  MISTRAL-SMALL-4-ANALYSIS.md  MISTRAL4-CONVERSION-LOG.md  MLXQ-RESULTS.md  MODEL-REFERENCE.md  PRECISION-FLOOR-RULES.md  TODO-REMAINING.md
research/experiments/: 2026-03-14-001-bit-packing-verification.md  2026-03-14-006-research-audit-summary.md  2026-03-14-007-first-mxq-quantization.md  2026-03-14-008-metal-shader-compilation.md  2026-03-14-009-swift-runtime-build.md  2026-03-14-010-model-structure-analysis.md  2026-03-14-011-first-inference-attempt.md  2026-03-14-012-real-embedding-inference.md  2026-03-14-013-gpu-cpu-verification.md  2026-03-14-014-attention-debugging.md  2026-03-14-015-baseline-comparison.md  2026-03-14-016-gemv-verified-correct.md  2026-03-14-017-first-token-comparison.md  2026-03-14-018-mlx-lm-reference-analysis.md  2026-03-14-019-llamacpp-metal-analysis.md  2026-03-14-020-layer-norm-comparison.md  2026-03-14-021-forward-pass-verified-correct.md  2026-03-14-022-rope-fix-results.md  2026-03-14-023-multi-model-architecture-testing.md  2026-03-14-024-quantitative-quality-comparison.md  2026-03-14-025-gptq-math-verification.md  2026-03-14-026-awq-real-model-validation.md  2026-03-14-027-full-quality-baselines.md  2026-03-14-028-variable-allocation-proven.md  (+31 more)
scripts/: reconvert_minimax.sh
(+633 files in other folders)
